// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.account;
import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.data.proto";
// No Services
message BillingAccount {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue short_name = 5;
}
